# FastAPI-Layout

./: .env.example  .gitignore  Dockerfile  alembic.ini  conftest.py  docker-compose.yml  firebase_decode_token.py  main.py  manual_engine_test.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0fe96084f969_add_refresh_tokens_and_composite_index.py  885d14216fa1_init_migration.py  8b0760879090_initial_schema.py
app/: main.py
app/core/: config.py
app/core/auth/: deps.py  firebase_init.py  firebase_provider.py  provider.py
app/core/exceptions/: auth.py  base.py
app/core/handlers/: domain_exception.py
app/db/: base.py  deps.py  engine.py  session.py  uow.py
app/modules/auth/: deps.py  model.py  repository.py  router.py  schema.py  service.py
app/modules/user/: model.py  repository.py  schema.py  service.py
test/integration/: conftest.py
test/integration/db/: test_deps.py  test_session.py
test/unit/core/: test_config.py
test/unit/core/app/modules/auth/: test_auth_deps.py  test_router.py
